Bug 51145 - FILEOPEN invalid .rtf causes useless ERRORMESSAGE
Summary: FILEOPEN invalid .rtf causes useless ERRORMESSAGE
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.5.5.1 rc
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks: Error-Messages
  Show dependency treegraph
 
Reported: 2012-06-16 00:40 UTC by Rainer Bielefeld Retired
Modified: 2019-04-27 20:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-06-16 00:40:00 UTC
Steps How to reproduce with server-installation of Master " 3.7.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 5af60dc]" (tinderbox: Win-x86@6-fast, pull time 2012-06-14 22:09:53):

1. Download / Unzip attachment 63102 [details] from Bug 34693
2. From LibO Start Center menu 'File -> Open'
   Expected: Useful Error message
   Actual: "General Error" 
            With German 3.5.5.1: "Allgemeiner Fehler. Allgemeiner
            Ein/Ausgabefehler"

Also see attachment 51105 [details]
Comment 1 m_a_riosv 2012-06-17 15:03:28 UTC
Reproducible with:
3.3.4 Portable
3.5.5.1
3.6.0.beta1
Win7x64 Ultimate
Comment 2 Rainer Bielefeld Retired 2012-06-18 21:38:59 UTC
Miklós:
Can you find out what happens?
Comment 3 Miklos Vajna 2012-10-22 08:06:54 UTC
Actually that's quite expected when it comes to UNO filters, like the RTF importer. OTOH I know the ODF import filter does a better job here -- I'll look into how that does so, and if we can do the same the RTF or not. I hope so. :-)
Comment 4 Not Assigned 2012-10-23 07:47:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=49e003177db4c5e83bfe9feeb4d12d472f97f3cb

fdo#51145 give better error message on import invalid RTF



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2012-10-23 13:40:42 UTC
Resolved in master -- no backport, I'm not comfortable with backporting such an intrusive change.
Comment 6 Roman Eisele 2012-10-25 17:06:14 UTC
VERIFIED as FIXED with LOdev 3.7.0.0.alpha0+ (Build ID: 370m0(Build:0); pull time: 2012-10-25 06:12:34) on Mac OS X 10.6.8.

A big progress! Opening the RTF file from attachment 63102 [details] now fails with the error message:
  “File format error found at 48043,147(row,col).”
which is still a bit technical ;-), but at least much better!
Advanced users can now try to repair a broken RTF file or, if it seems to be valid, tell what exactly LibreOffice does not like about it.

Thank you very much, Miklos!