fdo#51145 give better error message on import invalid RTF

Change-Id: Idd81e58b8b0b95b1027b7ece434cb362a689f124