writerfilter/source/filter/RtfFilter.cxx
@@ -27,6 +27,7 @@
 #include <rtftok/RTFDocument.hxx>
 #include <com/sun/star/frame/XFrame.hpp>
 #include <com/sun/star/task/XStatusIndicator.hpp>
+#include <com/sun/star/io/WrongFormatException.hpp>
 #ifdef DBG_COPYPASTE
 #include <unotools/localfilehelper.hxx>
 #include <tools/stream.hxx>
@@ -115,6 +116,10 @@ sal_Bool RtfFilter::filter( const uno::Sequence< beans::PropertyValue >& aDescri
 #endif
         sal_uInt32 nEndTime = osl_getGlobalTimer();
         SAL_INFO("writerfilter.profile", OSL_THIS_FUNC << " finished in " << nEndTime - nStartTime << " ms");
+    }
+    catch (const io::WrongFormatException&)
+    {
+        throw;
     }
     catch (const uno::Exception& e)
     {
