writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -578,15 +578,15 @@ void RTFDocumentImpl::resolve(Stream & rMapper)
             break;
         case ERROR_GROUP_OVER:
             SAL_INFO("writerfilter", OSL_THIS_FUNC << ": unmatched '{'");
-            throw io::UnexpectedEOFException();
+            throw io::WrongFormatException(m_pTokenizer->getPosition(), uno::Reference< uno::XInterface >());
             break;
         case ERROR_EOF:
             SAL_INFO("writerfilter", OSL_THIS_FUNC << ": unexpected end of file");
-            throw io::UnexpectedEOFException();
+            throw io::WrongFormatException(m_pTokenizer->getPosition(), uno::Reference< uno::XInterface >());
             break;
         case ERROR_HEX_INVALID:
             SAL_INFO("writerfilter", OSL_THIS_FUNC << ": invalid hex char");
-            throw io::WrongFormatException();
+            throw io::WrongFormatException(m_pTokenizer->getPosition(), uno::Reference< uno::XInterface >());
             break;
         case ERROR_CHAR_OVER:
             SAL_INFO("writerfilter", OSL_THIS_FUNC << ": characters after last '}'");
